# function-wrapper

./: .gitignore  Makefile  README.md  hugo.toml  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  pages.yml  tests.yml
devtools/: __init__.py  diagram_export.py  docs_export.py  sync_pyproject.py
docs/: 404.html  CLI_API_REFERENCE.md  README.md  STORAGE_STRATEGY.md  TAURI_SVELTE_INTEGRATION.md  TESTING_GUIDE.md  _index.md  architecture.md  enums.md  index.html  index.json  index.xml  models.mmd  requirements.in  requirements.txt  sitemap.xml  ui_kivy.md  ui_streamlit.md
docs/architecture/: index.html
docs/auto/: cli.md  index.html  index.xml  models.md  services.md  storage.md  ui_kivy.md  ui_streamlit.md  utils.md  workspace.md  z_visual.md
docs/auto/cli/: index.html
docs/auto/models/: index.html
docs/auto/services/: index.html
docs/auto/storage/: index.html
docs/auto/ui_streamlit/: index.html
docs/auto/utils/: index.html
docs/auto/workspace/: index.html
docs/auto/z_visual/: index.html
docs/cli_reference/: index.html
docs/enums/: index.html
docs/ephemeris/: index.html
docs/fastapi_tauri/: index.html
docs/installation/: index.html
docs/readme/: index.html
docs/site/: hugo.toml
docs/site/content/: _index.md  architecture.md  cli_reference.md  ephemeris.md  fastapi_tauri.md  industry_standards_audit.md  industry_standards_issues.md  installation.md  performance_bottleneck_analysis.md  performance_fix_summary.md  readme.md  testing_guide.md  ui_kivy.md  ui_streamlit.md
docs/site/content/auto/: cli.md  models.md  services.md  storage.md  ui_streamlit.md  utils.md  workspace.md  z_visual.md
docs/site/layouts/_default/: index.json  list.html  single.html
docs/site/layouts/partials/: search.html  topbar.html
docs/site/public/: 404.html  custom.css  index.html  index.json  index.xml  main.min.9a52cc69ec1a40f5e7c42f871b97944534d47ceb92d3b37fcc1ffef29c432474.css  sitemap.xml
docs/site/public/architecture/: index.html
docs/site/public/auto/: index.html  index.xml
docs/site/public/categories/: index.html  index.xml
docs/site/public/cli_api_reference/: index.html
docs/testing_guide/: index.html
docs/ui_kivy/: index.html
docs/ui_streamlit/: index.html
layouts/_default/: baseof.html  single.html
layouts/partials/: search.html
module/: __main__.py  astronomy.py  cli.py  default_aspects.yaml  logging_config.py  models.py  project.py  services.py  settings.db  settings.py  storage.py  ui_kivy.kv  ui_kivy.py  ui_streamlit.py  ui_translations.py  utils.py  workspace.py  z_visual.py
module/api/: __init__.py  __main__.py  app.py  schemas.py
public/: 404.html  custom.css  index.html  index.xml  models.mmd  sitemap.xml
public/architecture/: index.html
public/auto/: index.html  index.xml
public/auto/cli/: index.html
public/auto/models/: index.html
public/auto/services/: index.html
public/auto/storage/: index.html
public/auto/ui_kivy/: index.html
public/auto/ui_streamlit/: index.html
public/auto/utils/: index.html
public/auto/workspace/: index.html
public/auto/z_visual/: index.html
public/categories/: index.html  index.xml
public/cli_api_reference/: index.html
public/enums/: index.html
public/page/1/: index.html
public/readme/: index.html
public/storage_strategy/: index.html
public/tags/: index.html  index.xml
public/tauri_svelte_integration/: index.html
public/testing_guide/: index.html
public/ui_kivy/: index.html
public/ui_streamlit/: index.html
requirements/: base.in  base.txt  kivy.in  kivy.txt  streamlit.in  streamlit.txt
scripts/: gen_mermaid.py
smrk/: __main__.py  context.py  current.py  display.py  project.py  represent.py  settings.db  settings.py  translation.py  ui_kivy.py  ui_streamlit.py
source/: starfisher_sample.sfs
tests/: README.md  __init__.py  dates_places.py  polar.py  test_cli.py  test_comprehensive.py  test_dates_places.py  test_docs.py  test_engines.py  test_jpl_backend_j2000.py  test_locations.py  test_starfisher.py  test_storage.py  test_storage_stress.py  test_workspace_flow.py
(+27 files in other folders)
