[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kefer-sidecar"
version = "0.1.0"
description = "Kefer Astrology sidecar"
requires-python = ">=3.10"
# Note: Runtime dependencies are managed via requirements/*.in and compiled requirements files.

[tool.setuptools]
# Explicitly specify that the 'module' directory is the package
packages = ["module"]

[project.scripts]
# Optional: gives you a `kefer` command too (keeps -m working)
kefer = "module.__main__:main"

# Disable Poetry package mode for Streamlit Cloud
# This tells Poetry to only manage dependencies, not package the project
[tool.poetry]
package-mode = false
