[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kefer-sidecar"
version = "0.1.0"
description = "Kefer Astrology sidecar"
requires-python = ">=3.10"
# Note: Runtime dependencies are managed via requirements/*.in and compiled requirements files.
# Dependencies listed here for Streamlit Cloud (which uses Poetry)
dependencies = [
    "geopy>=2.4.1",
    "kaleido>=0.2.1",
    "kerykeion>=4.26.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "PyYAML>=6.0.2",
    "skyfield>=1.48",
    "streamlit>=1.47.0",
    "timezonefinder>=6.6.2",
]

[tool.setuptools]
# Explicitly specify that the 'module' directory is the package
packages = ["module"]

[project.scripts]
# Optional: gives you a `kefer` command too (keeps -m working)
kefer = "module.__main__:main"

# Disable Poetry package mode for Streamlit Cloud
# This tells Poetry to only manage dependencies, not package the project
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
# Core dependencies (from base.in)
geopy = ">=2.4.1"
kaleido = ">=0.2.1"
kerykeion = ">=4.26.0"
matplotlib = ">=3.10.0"
pandas = ">=2.3.1"
plotly = ">=6.2.0"
PyYAML = ">=6.0.2"
skyfield = ">=1.48"
timezonefinder = ">=6.6.2"
# Streamlit UI dependencies
streamlit = ">=1.47.0"
