[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kefer-sidecar"
version = "0.1.0"
description = "Kefer Astrology sidecar"
requires-python = ">=3.10,<4"
# Note: Runtime dependencies are managed via requirements/*.in and compiled requirements files.
# Keep core runtime deps here; UI wrappers live in optional extras below.
dependencies = [
    "duckdb>=1.4.3",
    "geopy>=2.4.1",
    "kaleido>=0.2.1",
    "kerykeion>=4.26.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyarrow>=21.0.0",
    "PyYAML>=6.0.2",
    "skyfield>=1.48",
    "timezonefinder>=6.6.2",
    "urllib3>=2.6.0",
]
[project.optional-dependencies]
streamlit = [
    "streamlit>=1.50.0",
]

kivy = [
    "kivy>=2.3.1",
    "kivymd @ git+https://github.com/kivymd/KivyMD.git@master",
    "pywebview>=4.4",
    "kivy-garden>=0.1.5",
]

docs = [
    "streamlit>=1.50.0",
    "kivy>=2.3.1",
    "kivymd @ git+https://github.com/kivymd/KivyMD.git@master",
    "pywebview>=4.4",
    "kivy-garden>=0.1.5",
]
[tool.setuptools]
# Explicitly specify that the 'module' directory is the package
packages = ["module"]

[project.scripts]
# Optional: gives you a `kefer` command too (keeps -m working)
kefer = "module.__main__:main"

# Disable Poetry package mode for Streamlit Cloud
# This tells Poetry to only manage dependencies, not package the project
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4"
duckdb = ">=1.4.3"
geopy = ">=2.4.1"
kaleido = ">=0.2.1"
kerykeion = ">=4.26.0"
matplotlib = ">=3.10.0"
pandas = ">=2.3.1"
plotly = ">=6.2.0"
pyarrow = ">=21.0.0"
PyYAML = ">=6.0.2"
skyfield = ">=1.48"
timezonefinder = ">=6.6.2"
urllib3 = ">=2.6.0"
[tool.poetry.group.streamlit.dependencies]
streamlit = ">=1.50.0"
[tool.poetry.group.kivy.dependencies]
kivy = ">=2.3.1"
kivymd = {git = "https://github.com/kivymd/KivyMD.git", branch = "master"}
pywebview = ">=4.4"
kivy-garden = ">=0.1.5"
